# Deepseek-Local-RAG-Agent

./: .env.example  .gitignore  DOCKER_README.md  Dockerfile  README.md  app.py  docker-compose.dev.yml  docker-compose.yml  docker_start.sh  docker_stop.sh  drive.py  google_drive_popup.html  naive_rag.py  pyproject.toml  rag.py  requirements.txt  run_qdrant.sh  serve_picker.py  start_qdrant.py
drive_mcp/: README.md  gdrive.py  pinecone_indexer.py
google_drive_picker/: Dockerfile  README.md  __init__.py
google_drive_picker/frontend/: package-lock.json  package.json
google_drive_picker/frontend/public/: index.html
google_drive_picker/frontend/src/: index.js
mcp/example/: main.py
