[project]
name = "deepseek-local-rag-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "agno>=1.4.2",
    "bs4>=0.0.2",
    "exa-py>=1.12.1",
    "google-api-python-client>=2.168.0",
    "google-auth>=2.39.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.2",
    "groq>=0.23.1",
    "langchain-community>=0.3.22",
    "langchain-groq>=0.3.2",
    "langchain-openai>=0.3.16",
    "langchain-pinecone>=0.2.5",
    "langchain-qdrant>=0.2.0",
    "ollama>=0.4.8",
    "pinecone>=6.0.2",
    "pinecone-client>=6.0.0",
    "psutil>=7.0.0",
    "pypdf>=5.4.0",
    "pypdf2>=3.0.1",
    "python-dotenv>=1.1.0",
    "streamlit>=1.44.1",
]
